# ComfyUI-NKD-VFX-Tools

./: .gitignore  README.md  __init__.py  lens_blur_node.py  mask_scheduler_node.py  nkd_fspy_camera.py  nkd_perspective_dewarp.py  nkd_preview_3d.py  nkd_vfx_helpers.py  package-lock.json  package.json  pyproject.toml  relighting_node.py  tsconfig.json  vite.config.mts
.github/workflows/: publish.yml
src/: FSpyWidget.vue  Preview3DWidget.vue  fspy_main.ts  lens_blur_main.ts  main.ts  preview3d_main.ts  solver.ts
src/components/: LensBlurCanvas.vue  RelightingCanvas.vue
web/js/: fspy_camera_widget.js  lens_blur_widget.js  perspective_dewarp_widget.js  preview3d_widget.js  relighting_widget.js
web/js/assets/: _plugin-vue_export-helper-B2JzIScF.js
